fix: overflow buttons

--- a/LegacyJobs/main.css
+++ b/LegacyJobs/main.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 100vh 500px 60px;
+    grid-template-rows: minmax(100vh, max-content) 500px 60px;
     grid-template-areas:
                          "main"
                          "container"
@@ -40,21 +40,19 @@ header {
 
 main {
 	padding: 50px 90px;
-	background: rgb(174, 228, 174);
 	grid-area: main;
 	background: url(./img/background/2K1A9643.svg) no-repeat center center fixed;
 	z-index: -2;
-	background-size: cover;
+    background-size: cover;
 }
 
 .layer {
     background: rgba(0, 52, 99, 0.64) no-repeat center center fixed;
-	background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-	height: 100%;
+	height: 500%;
 	z-index: -1;
 }
 footer {
